# FlashMethods

./: README.md
FlashMethods/: pyproject.toml
FlashMethods/flashmethods/: parser+processor.py
FlashMethods/flashmethods/chcparser/: PVTSimParser.py  base_eos_flash.py  base_flash.py  example.py  srk_peneloux_flash.py
FlashMethods/flashmethods/chcparser/mixtures/: FLASHtest1.CHC  FLASHtest10.CHC  FLASHtest2.CHC  FLASHtest3.CHC  FLASHtest4.CHC  FLASHtest5.CHC  FLASHtest6.CHC  FLASHtest7.CHC  FLASHtest8.CHC  FLASHtest9.CHC
FlashMethods/flashmethods/data/: BIPSS.xlsx  input_data.xlsx
FlashMethods/flashmethods/domain/: base_flash.py  srk_flash.py  srk_peneloux_flash.py  stable_and_flash.py
FlashMethods/flashmethods/dtos/: equation_dto.py  fluid_dto.py
FlashMethods/flashmethods/interfaces/: base_alchemy_session.py  base_equation.py  base_factory.py  base_model.py  base_repository.py  base_service.py
FlashMethods/flashmethods/new_domain/: base_eos_flash.py  base_flash.py  pr_flash.py  srk_flash.py  srk_peneloux_flash.py
FlashMethods/matlab/: Stable_and_Flash_SRK_Peneloux_Phase_Envelope.m  Stable_and_Flash_SRK_Peneloux_enthalpy_entropy_Cp_JTh.m  findroot.m
FlashMethods/now_in_site/: README.md  equation.py  parser+processor.py
FlashMethods/now_in_site/data/: PVTSIM_Fluid1_sostav.xlsx  README.md  input_data_for_equations.py
FlashMethods/old_equations/: PR_equation.py  PR_equation_with_peneloux.py  README.md  SRK_equation.py  SRK_with_peneloux_equation.py
Matlab/: Stable_and_Flash.m  Stable_and_Flash_SRK_Peneloux_enthalpy.m  (+1 more)
